@@ -10,7 +10,7 @@ int main() {
   // Get a PDF set object and use it to get a vector of heap-allocated PDFs
   LHAPDF::PDFSet set("CT10nlo");
   vector<LHAPDF::PDF*> pdfs = set.mkPDFs();
-  foreach (LHAPDF::PDF* p, pdfs) {
+  BOOST_FOREACH (LHAPDF::PDF* p, pdfs) {
     const double xf_g = p->xfxQ(21, 1e-3, 126.0);
     cout << xf_g << endl;
     delete p; //< Manual deletion required
