@@ -187,7 +187,7 @@ namespace LHAPDF {
     /// Writes to the same internal arrays as setQ2Values, appropriately transformed.
     void setQValues(const std::vector<double>& qs) {
       std::vector<double> q2s;
-      foreach (double q, qs) q2s.push_back(q*q);
+      BOOST_FOREACH (double q, qs) q2s.push_back(q*q);
       setQ2Values(q2s);
     }
 
@@ -251,7 +251,7 @@ namespace LHAPDF {
     /// Set the array of Q values for interpolation, and also the caching flag
     void setQValues(const std::vector<double>& qs) {
       std::vector<double> q2s;
-      foreach (double q, qs) q2s.push_back(q*q);
+      BOOST_FOREACH (double q, qs) q2s.push_back(q*q);
       setQ2Values(q2s);
     }
 
