@@ -208,7 +208,7 @@ namespace LHAPDF {
           const KnotArrayNF& subgrid = isub->second;
           const KnotArray1F& grid1 = subgrid.get_first();
           if (grid1.q2s().empty()) continue;
-          foreach (const double& q2, grid1.q2s()) {
+          BOOST_FOREACH (const double& q2, grid1.q2s()) {
             if (_q2knots.empty() || q2 != _q2knots.back()) _q2knots.push_back(q2);
           }
         }
