@@ -66,7 +66,7 @@ namespace LHAPDF {
   inline int lookupLHAPDFID(const std::string& setname, int memid) {
     // const map<int, string>& = getPDFIndex();
     typedef pair<int, string> MapPair;
-    foreach (const MapPair& id_name, getPDFIndex()) {
+    BOOST_FOREACH (const MapPair& id_name, getPDFIndex()) {
       if (id_name.second == setname) return id_name.first + memid;
     }
     return -1; //< failure value
