@@ -48,7 +48,7 @@ namespace LHAPDF {
   /// If no matching file is found, return an empty path.
   inline std::string findFile(const std::string& target) {
     if (target.empty()) return "";
-    foreach (const string& base, paths()) {
+    BOOST_FOREACH (const string& base, paths()) {
       const string p = startswith(target, "/") ? target : base / target;
       if (file_exists(p)) return p;
     }
@@ -100,7 +100,7 @@ namespace LHAPDF {
     // Return cached list if valid
     if (!rtn.empty()) return rtn;
     // Otherwise this is the first time: populate the list
-    foreach (const string& p, paths()) {
+    BOOST_FOREACH (const string& p, paths()) {
       if (!dir_exists(p)) continue;
       DIR* dir;
       struct dirent* ent;
