@@ -5,13 +5,13 @@
 using namespace std;
 
 int main() {
-  foreach (const string& p, LHAPDF::paths())
+  BOOST_FOREACH (const string& p, LHAPDF::paths())
     cout << p << endl;
 
   cout << "@" << LHAPDF::findFile("lhapdf.conf") << "@" << endl;
 
   cout << "List of available PDFs:" << endl;
-  foreach (const string& s, LHAPDF::availablePDFSets())
+  BOOST_FOREACH (const string& s, LHAPDF::availablePDFSets())
     cout << " " << s << endl;
 
   return 0;
